Microdata: PropertyNodeList cache should be invalidated on id attribute change. https://bugs.webkit.org/show_bug.cgi?id=93485

Reviewed by Ryosuke Niwa.

Source/WebCore:

Invalidate PropertyNodeList cache when id attribute of an element changed/modified.

Test: fast/dom/MicroData/propertiescollection-on-changing-id-attr.html

* dom/DynamicNodeList.cpp: Moved ownerNodeHasItemRefAttribute() method to DynamicNodeList.h
(WebCore):
* dom/DynamicNodeList.h:
(WebCore):
(WebCore::DynamicNodeListCacheBase::isRootedAtDocument): Return true if owner has itemref
attribute specified with root type NodeListIsRootedAtDocumentIfOwnerHasItemrefAttr.
(WebCore::DynamicNodeListCacheBase::shouldInvalidateTypeOnAttributeChange): Return true if
attrName is id attribute in case of InvalidateOnItemAttrChange.
(WebCore::DynamicNodeListCacheBase::ownerNodeHasItemRefAttribute):

LayoutTests:

Added test to verify HTMLPropertiesCollection and PropertyNodeList interfaces
behavior on changing id attribute.

* fast/dom/MicroData/propertiescollection-on-changing-id-attr-expected.txt: Added.
* fast/dom/MicroData/propertiescollection-on-changing-id-attr.html: Added.


Canonical link: https://commits.webkit.org/111448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125159 268f45cc-cd09-0410-ab3c-d52691b4dbfc